[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main/Main.gd" type="Script" id=2]
[ext_resource path="res://Main/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/AUI/AUIPlayer.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 300 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
is_aui = true

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 412, 300 )
rotation = 3.14159
player_id = 0

[node name="AUI" parent="." instance=ExtResource( 4 )]
position = Vector2( 612, 300 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 512, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 512, 600 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 0, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
shape = SubResource( 2 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2( 1024, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
shape = SubResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="game_over" from="." to="HUD" method="_on_Main_game_over"]
[connection signal="update_player_health" from="." to="HUD" method="_on_Main_update_player_health"]
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="update_health" from="Player" to="." method="_on_Player_update_health"]
[connection signal="dead" from="AUI" to="." method="_on_Player_dead"]
[connection signal="update_health" from="AUI" to="." method="_on_Player_update_health"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
